compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify5.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nfn wobble(x: Int) -> Int {\n    x * 5\n}\n\nfn run(one: fn(String) -> Int) {\n    one(\"one.\")\n}\n\nfn demo() {\n    run(wobble)\n}"
---
error: Type mismatch
   ┌─ /src/one/two.gleam:11:9
   │
11 │     run(wobble)
   │         ^^^^^^

Expected type:

    fn(String) -> Int

Found type:

    fn(Int) -> Int
